welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: type lnt
var nbpas:lnt=null
          ^