welcome.lessons.welcome.variables.Variables.scala.code
var nbpas:lnt=null

while (!estSurBiscuit) {
	avance()
}
	